# programming-paradigms-course

./: .gitignore  README.md  cabal.project  programming-paradigms-course.cabal
.github/workflows/: test.yml
scripts/: CreatePackage.hs  CreateSheetPackage.hs  scripts.cabal
sheet00/: Lecture10.hs  Lecture11.hs  Max3.hs  sheet00.cabal
sheet00/tests/: TestBinom.hs  TestControlFlow.hs  TestFaculty.hs  TestFibonacci.hs  TestLecture11.hs  TestListFunctions.hs  TestMax3.hs  TestQuickSort.hs  TestUtils.hs  Tests.hs
sheet01/: Arithmetik.hs  Sort.hs  sheet01.cabal
sheet01/tests/: TestArithmetik.hs  TestSort.hs  Tests.hs
sheet02/: Polynom.hs  sheet02.cabal
sheet02/tests/: TestPolynom.hs  Tests.hs
sheet03/: Collatz.hs  Fibs.hs  Merge.hs  sheet03.cabal
sheet03/tests/: TestCollatz.hs  TestFibs.hs  TestMerge.hs  Tests.hs
sheet04/: Ast.hs  RopeEditor.hs  RopeEditorMain.hs  Ropes.hs  sheet04.cabal
sheet04/tests/: TestAst.hs  TestRopeEditor.hs  TestRopes.hs  Tests.hs
sheet05/: ChurchNumbers.hs  ChurchPair.hs  sheet05.cabal
sheet05/tests/: TestChurchNumbers.hs  TestChurchPair.hs  Tests.hs
sheet06/: CurryHowardCorrespondence.hs  sheet06.cabal
sheet06/tests/: TestCurryHowardCorrespondence.hs  Tests.hs
sheet07/: fourColors.pl  fourColors.plt  regex.pl  regex.plt  wolfGoatCabbage.pl  wolfGoatCabbage.plt
sheet08/: Splits.hs  evenOdd.pl  sheet08.cabal  splits.pl  splits.plt
sheet08/tests/: TestSplits.hs  Tests.hs
sheet10/: .gitignore  matrix_multiplication.c  run_matrix_multiplication.sh  run_task5.sh  task5.c
sheet11/: Barrier.java  BarrierTest.java  IBarrier.java  MaxOfMax.java  PrimeCounterParallel.java  PrimeCounterSequential.java  PrimeTester.java  run-BarrierTest.sh  run-MaxOfMax.sh  run-PrimeCounterParallel.sh  run-PrimeCounterSequential.sh
sheet12/: Cart.java  Company.java  ConcreteCompany.java  Counter.java  Employee.java  Person.java  Product.java  Shopping.java  check-Company.sh  check-Shopping.sh
test-utils/: TestUtils.hs  test-utils.cabal
tutorial01/: CharCounter.hs  Euklid.hs  Exam.hs  tutorial01.cabal
tutorial01/tests/: TestCharCounter.hs  TestEuklid.hs  TestExam.hs  Tests.hs
tutorial02/: RunLengthEncoding.hs  tutorial02.cabal
tutorial02/tests/: TestRunLengthEncoding.hs  Tests.hs
tutorial03/: Queue.hs  Tree.hs  tutorial03.cabal
tutorial03/tests/: TestQueue.hs  TestTree.hs  Tests.hs
tutorial04/: Church.hs  tutorial04.cabal
tutorial04/tests/: TestChurch.hs  Tests.hs
tutorial05/: Sprite.hs  tutorial05.cabal
tutorial05/tests/: TestSprite.hs  Tests.hs
tutorial07/: change.pl  change.plt
tutorial10/: increase_and_sum  increase_and_sum.c
tutorial12/: ISet.java  Set.java  WebserverProxy.java  check-Set.sh  check-WebserverProxy.sh
