cabal-version: 3.6
name: sheet00
version: 1.0.0
build-type: Simple

Library
    hs-source-dirs: .
    Exposed-Modules: Lecture10, Lecture11, Max3
    Build-Depends: base >= 3

Test-Suite sheet00-tests
    type: exitcode-stdio-1.0
    hs-source-dirs: ./tests
    Main-is: Tests.hs
    Other-Modules:  TestQuickSort,
                    TestBinom,
                    TestFaculty,
                    TestFibonacci,
                    TestListFunctions,
                    TestControlFlow,
                    TestUtils,
                    TestLecture11,
                    TestMax3
    Build-Depends:  base >= 3,
                    HUnit,
                    test-framework,
                    test-framework-hunit,
                    sheet00
