cabal-version: 3.6
name: sheet02
version: 1.0.0
build-type: Simple

Library
    hs-source-dirs: .
    Exposed-Modules: Polynom
    Build-Depends: base >= 3

Test-Suite sheet02-tests
    type: exitcode-stdio-1.0
    hs-source-dirs: ./tests
    Main-is: Tests.hs
    Other-Modules:  TestPolynom
    Build-Depends:  base >= 3,
                    test-utils,
                    sheet02
