cabal-version: 3.6
name: sheet04
version: 1.0.0
build-type: Simple

Executable rope-editor
    hs-source-dirs: .
    Main-is: RopeEditorMain.hs
    Other-Modules:  Ropes, RopeEditor
    Build-Depends:  base >= 3

Library
    hs-source-dirs: .
    Exposed-Modules: Ast, Ropes, RopeEditor
    Build-Depends: base >= 3

Test-Suite sheet04
    type: exitcode-stdio-1.0
    hs-source-dirs: ./tests
    Main-is: Tests.hs
    Other-Modules:  TestAst,
                    TestRopes,
                    TestRopeEditor
    Build-Depends:  base >= 3,
                    test-utils,
                    sheet04

