cabal-version: 3.6
name: sheet05
version: 1.0.0
build-type: Simple

Library
    hs-source-dirs: .
    Exposed-Modules: ChurchNumbers
    Build-Depends: base >= 3

Test-Suite sheet05
    type: exitcode-stdio-1.0
    hs-source-dirs: ./tests
    Main-is: Tests.hs
    Other-Modules:  TestChurchNumbers
    Build-Depends:  base >= 3,
                    test-utils,
                    sheet05

