cabal-version: 3.6
name: sheet06
version: 1.0.0
build-type: Simple

Library
    hs-source-dirs: .
    Exposed-Modules: CurryHowardCorrespondence
    Build-Depends: base >= 3

Test-Suite sheet06
    type: exitcode-stdio-1.0
    hs-source-dirs: ./tests
    Main-is: Tests.hs
    Other-Modules:  TestCurryHowardCorrespondence
    Build-Depends:  base >= 3,
                    test-utils,
                    sheet06

