cabal-version: 3.6
name: sheet08
version: 1.0.0
build-type: Simple

Library
    hs-source-dirs: .
    Exposed-Modules: Splits
    Build-Depends: base >= 3

Test-Suite sheet08
    type: exitcode-stdio-1.0
    hs-source-dirs: ./tests
    Main-is: Tests.hs
    Other-Modules:  TestSplits
    Build-Depends:  base >= 3,
                    test-utils,
                    sheet08

