cabal-version: 3.6
name: tutorial01
version: 1.0.0
build-type: Simple

Library
    hs-source-dirs: .
    Exposed-Modules:    CharCounter,
                        Exam,
                        Euklid
    Build-Depends: base >= 3

Test-Suite tutorial01
    type: exitcode-stdio-1.0
    hs-source-dirs: ./tests
    Main-is: Tests.hs
    Other-Modules:  TestCharCounter,
                    TestExam,
                    TestEuklid
    Build-Depends:  base >= 3,
                    test-utils,
                    tutorial01

