cabal-version: 3.6
name: tutorial02
version: 1.0.0
build-type: Simple

Library
    hs-source-dirs: .
    Exposed-Modules: RunLengthEncoding
    Build-Depends: base >= 3

Test-Suite tutorial02
    type: exitcode-stdio-1.0
    hs-source-dirs: ./tests
    Main-is: Tests.hs
    Other-Modules:  TestRunLengthEncoding
    Build-Depends:  base >= 3,
                    test-utils,
                    tutorial02

